[gd_scene load_steps=3 format=3 uid="uid://de35wwlxe3o58"]

[ext_resource type="Script" uid="uid://d1t63icq8mufg" path="res://scripts/habit_popup.gd" id="1_1v4xp"]
[ext_resource type="Theme" uid="uid://bjig4nk5dlsff" path="res://scenes/buttons.tres" id="2_570nk"]

[node name="PopUpColorRect" type="ColorRect" groups=["Background"]]
offset_right = 192.0
offset_bottom = 110.0
color = Color(0.380392, 0.368627, 0.294118, 1)
script = ExtResource("1_1v4xp")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="TextHBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2

[node name="HabitTitle" type="LineEdit" parent="MarginContainer/TextHBox" groups=["TextObjects"]]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "new habit"

[node name="VBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="OkButton" type="Button" parent="MarginContainer/VBoxContainer" groups=["TextObjects"]]
self_modulate = Color(0.768627, 0.768627, 0.709804, 1)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("2_570nk")
text = "OK"

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer" groups=["TextObjects"]]
layout_mode = 2
theme = ExtResource("2_570nk")
text = "Cancel"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="text_submitted" from="MarginContainer/TextHBox/HabitTitle" to="." method="_on_habit_title_text_submitted"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/OkButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
